tests/fails/goto_label.lt
goto a       -- goto undefined label <a>
::b::

do ::a::     -- unused label <a>

do
	while true
		goto c
		goto b
::c::
::e::

do
	goto e

goto d          -- goto <d> jumps into the scope of variable dd at line 18
var dd = 10     -- unused variable `dd`
::d::

goto e
(->
	goto c       -- goto undefined label <c>
)()


